[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/button/border_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://gameplay/sp/ui/battle_end/battle_end.gd" type="Script" id=4]

[node name="battle_end" type="MarginContainer"]
margin_right = 600.0
margin_bottom = 291.0
script = ExtResource( 4 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 291.0
color = Color( 0.117647, 0.117647, 0.117647, 0.917647 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 291.0

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer2"]
margin_right = 600.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 34.0
margin_right = 600.0
margin_bottom = 94.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
margin_right = 146.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer"]
margin_left = 150.0
margin_right = 450.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Mission"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
margin_left = 454.0
margin_right = 600.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 98.0
margin_right = 600.0
margin_bottom = 178.0
rect_min_size = Vector2( 80, 80 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 182.0
margin_right = 600.0
margin_bottom = 262.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 57.0
margin_right = 67.0
margin_bottom = 80.0
rect_min_size = Vector2( 10, 0 )

[node name="restart" parent="VBoxContainer2/HBoxContainer3" instance=ExtResource( 1 )]
margin_left = 71.0
margin_right = 291.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 80 )
button_label = "Restart"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 295.0
margin_right = 529.0
margin_bottom = 80.0

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3/HBoxContainer"]
margin_right = 10.0
margin_bottom = 80.0
rect_min_size = Vector2( 10, 0 )

[node name="next" parent="VBoxContainer2/HBoxContainer3/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 14.0
margin_right = 234.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 80 )
button_label = "Next"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 533.0
margin_right = 543.0
margin_bottom = 80.0
rect_min_size = Vector2( 10, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
visible = false
margin_top = 182.0
margin_right = 600.0
margin_bottom = 262.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 176.0
margin_right = 186.0
margin_bottom = 80.0
rect_min_size = Vector2( 10, 0 )

[node name="credit" parent="VBoxContainer2/HBoxContainer4" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 410.0
margin_bottom = 80.0
rect_min_size = Vector2( 220, 80 )
button_label = "Credit"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 414.0
margin_right = 424.0
margin_bottom = 80.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 266.0
margin_right = 600.0
margin_bottom = 291.0
rect_min_size = Vector2( 0, 25 )

[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/HBoxContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer4/credit" to="." method="_on_credit_pressed"]
